--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,5 +20,6 @@
             </div>
             <button type="submit">Login</button>
         </form>
+        <a href="/register">register</a>
     </body>
 </html>
