--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,20 +1,32 @@
-<h1>Register</h1>
-<form action="/register" method="POST">
-    <div>
-        <label for "name">Name</label>
-        <input type="text" id = "name" name="name"
-        required>
-    </div>
-    <div>
-        <label for "email">Email</label>
-        <input type="text" id = "email" name="email"
-        required>
-    </div>
-    <div>
-        <label for "pasword">Password</label>
-        <input type="text" id = "password" name="password"
-        required>
-    </div>
-    <button type="submit">Register</button>
-</form>
-<a href="/login">login</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+		<title>Login Form</title>
+        <styele>
+            
+        </styele>
+    </head>
+    <body>
+        <h1>Register</h1>
+        <form action="/register" method="POST">
+            <div>
+                <label for "name">Name</label>
+                <input type="text" id = "name" name="name"
+                required>
+            </div>
+            <div>
+                <label for "email">Email</label>
+                <input type="email" id = "email" name="email"
+                required>
+            </div>
+            <div>
+                <label for "pasword">Password</label>
+                <input type="password" id = "password" name="password"
+                required>
+            </div>
+            <button type="submit">Register</button>
+        </form>
+        <a href="/login">login</a>
+    </body>
+</html>
