--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,30 +3,33 @@
     <head>
         <meta charset="utf-8">
 		<title>Login Form</title>
-        <styele>
-            
-        </styele>
+        <link rel="stylesheet" type="text/css" href="/css/style.css">        
+        
     </head>
     <body>
-        <h1>Register</h1>
-        <form action="/register" method="POST">
-            <div>
+        <h1>Register Your Account Here</h1>
+
+        <div class="box_login">
+            <p class="subjudul">create account</p>
+            <form action="/register" method="POST">
+                
                 <label for "name">Name</label>
-                <input type="text" id = "name" name="name"
-                required>
-            </div>
-            <div>
+                <input type="text" id = "name" name="name" required class="form_login">
+               
                 <label for "email">Email</label>
-                <input type="email" id = "email" name="email"
-                required>
-            </div>
-            <div>
+                <input type="email" id = "email" name="email" required class="form_login">
+                
                 <label for "pasword">Password</label>
-                <input type="password" id = "password" name="password"
-                required>
-            </div>
-            <button type="submit">Register</button>
-        </form>
-        <a href="/login">login</a>
+                <input type="password" id = "password" name="password" required class="form_login">
+                                
+               
+                <button type="submit">Register</button>
+                <br></br>
+                <p>Already have an account?</p>
+                <a class=link href="/login">login</a>
+                <br></br>
+            </form>
+        </div>
+            
     </body>
 </html>
