--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
-<h1>hi <%= name %></h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+		
+    </head>
+    <body>
+        <h1> Welcome <%= name %></h1>
+        <h2> You are Succes login to your account </h2>
+    </body>
+</html>
+
