--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,32 @@
     <head>
         <meta charset="utf-8">
 		<title>Login Form</title>
-        <styele></styele>
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        
     </head>
     <body>
         <h1>Login</h1>
-        <form action="/login" method="POST">
-            <div>
+        
+        <div class="box_login">
+            <p class ="subjudul">login with your registered account</p>
+            <form action="/login" method="POST">
+            
                 <label for "email">Email</label>
-                <input type="text" id = "email" name="email"
-                required>
-            </div>
-            <div>
+                <input type="text" id = "email" name="email" required class="form_login">
+            
                 <label for "pasword">Password</label>
-                <input type="text" id = "password" name="password"
-                required>
-            </div>
-            <button type="submit">Login</button>
-        </form>
-        <a href="/register">register</a>
+                <input type="text" id = "password" name="password" required class="form_login">
+            
+                <button type="submit">Login</button>
+                <br></br>
+                <p>Don't have an account yet?</p>                
+                <a class=link href="/register">Register</a>
+                <br></br>
+                
+            </form>
+        </div>
+
+        
+        
     </body>
 </html>
